2011-08-23  Steve Block  <steveblock@google.com>

        Remove all mention of removed Android files from build scripts
        https://bugs.webkit.org/show_bug.cgi?id=66755

        Reviewed by Tony Gentilcore.

        * JavaScriptCore.gyp/JavaScriptCore.gyp:
        * JavaScriptCore.gypi:
        * gyp/JavaScriptCore.gyp:

2011-08-23  Adam Barth  <abarth@webkit.org>

        Remove WebCore/editing/android and other Android-specific directories
        https://bugs.webkit.org/show_bug.cgi?id=66739

        Reviewed by Steve Block.

        Now that Android shares more code with Chromium, we don't need these
        Android-specific files.

        * wtf/android: Removed.
        * wtf/android/AndroidThreading.h: Removed.
        * wtf/android/MainThreadAndroid.cpp: Removed.

2011-08-23  Ilya Tikhonovsky  <loislo@chromium.org>

        Unreviewed build fix for compile error on Windows for r93560.

        * runtime/SamplingCounter.h:

2011-08-22  Filip Pizlo  <fpizlo@apple.com>

        Sampling counter support is in the bytecode directory
        https://bugs.webkit.org/show_bug.cgi?id=66724

        Reviewed by Darin Adler.
        
        Moved SamplingCounter to a separate header in runtime/.

        * GNUmakefile.list.am:
        * JavaScriptCore.pro:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * bytecode/SamplingTool.cpp:
        * bytecode/SamplingTool.h:
        * runtime/SamplingCounter.cpp: Added.
        (JSC::AbstractSamplingCounter::dump):
        * runtime/SamplingCounter.h: Added.
        (JSC::AbstractSamplingCounter::count):
        (JSC::AbstractSamplingCounter::addressOfCounter):
        (JSC::AbstractSamplingCounter::init):
        (JSC::SamplingCounter::SamplingCounter):
        (JSC::GlobalSamplingCounter::name):
        (JSC::DeletableSamplingCounter::DeletableSamplingCounter):
        (JSC::DeletableSamplingCounter::~DeletableSamplingCounter):
